# College

./: README.md
CS-141/: README.md
CS-141/DivvyData/: CMakeLists.txt  main.cpp
CS-141/Gladiolus/: CMakeLists.txt  main.cpp
CS-141/Great13/: main.cpp
CS-141/Lab-CaesarCipher/: CMakeLists.txt  main.cpp
CS-141/Lab-Classes/: CMakeLists.txt  main.cpp
CS-141/Lab-LinkedLists/: CMakeLists.txt  main.cpp
CS-141/Lab-MultiplicationTables/: CMakeLists.txt  main.cpp
CS-141/Lecture-Calendar/: CMakeLists.txt  main.cpp
CS-141/Typing/: Prog 3 sample output.docx  main.cpp
CS-141/Unscrambler/: CMakeLists.txt  main.cpp
CS-141/Unscrambler-Undo/: CMakeLists.txt  main.cpp
CS-211/: README.md
CS-211/Lab-14/: deq.c  deq.h  deq_tst  deq_tst.c  makefile
CS-211/Project-1/: README.txt  batch  histogram  histogram.c  makefile  median3  median3.c  num_ones  num_ones.c  p1t1.out  p1t2.inp  p1t2.out  p1t4.ref  p1t5.inp  p1t5.ref  p2t1.out  p2t2.out  p2t3.ref  p3t1.out  p3t3.out  p3t4.out  p3t5.ref  p4t1.ref  p4t2.inp  p4t2.out  p4t3.inp  p4t3.ref  p4t4.inp  p4t4.ref  search.c  stairs  stairs.c
CS-211/Project-2/: prog2  prog2.c
CS-211/Project-3/: board5.txt  bpgame-jash.c  bpgame.c  bpop  bpop.c
CS-211/Project-4/: ll_tst  llist.c  makefile  tests_pt1  tests_pt2
CS-211/Project-5/: Makefile  fdriver  sq.c
CS-251/: README.md
CS-251/OE-1/: main  main.cpp  (+2 more)
CS-251/P4-Labyrinth_Escape/: CMakeLists.txt  EscapeTheLabyrinth.h  gdb_log.txt  grid.h  tests.cpp
CS-342/: README.md  shell.nix
CS-398/: mu.v
MATH-496/: log.txt  minesweeper.py  runner.py  tictactoe.py
(+40 files in other folders)
